Update README.md
added additional descriptions for games